<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_covid"
            android:id="@+id/covid"
            android:title="@string/covid_19" />
        <item
            android:icon="@drawable/ic_news"
            android:id="@+id/newsPapers"
            android:title="@string/news_papers"/>
        <item
            android:icon="@drawable/ic_assembly"
            android:id="@+id/assemblyResults"
            android:title="@string/assembly_results" />
        <item
            android:icon="@drawable/ic_parliament"
            android:id="@+id/parliamentResults"
            android:title="@string/parliament_results" />

        <item
            android:icon="@drawable/ic_ministers"
            android:id="@+id/ministersList"
            android:title="@string/ap_ministers" />
    </group>

    <item android:title="@string/app_name">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/rateUs"
                    android:icon="@drawable/ic_rate_review"
                    android:title="@string/rate_us" />
                <item
                    android:icon="@drawable/ic_info"
                    android:id="@+id/aboutUs"
                    android:title="@string/about_us" />
            </group>
        </menu>
    </item>

</menu>
