<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/activityBackground"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activities.mla.AssemblyResultsFragment"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assembly_election_results"
            style="@style/TitleStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/symbol"
                style="@style/TableTitleStyle"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/party_code"
                style="@style/TableTitleStyle"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seats_won"
                style="@style/TableTitleStyle"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vote_percentage"
                style="@style/TableTitleStyle"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/ysrcpMlas"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ysrcp_flag">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_ysrcp_symbol"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ysrcp"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/ysrcpSeats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ysrcp_seats"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/ysrcpVoteShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ysrcp_vote_percentage"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/tdpMlas"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tdp_flag">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_tdp_symbol"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tdp"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tdpSeats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tdp_seats"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tdpVoteShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tdp_vote_percentage"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/jspMlas"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/jsp_flag">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_jsp_symbol"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jsp"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jspSeats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jsp_seats"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/jspVoteShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/jsp_vote_percentage"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/incMlas"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inc_flag">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_inc_symbol"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/inc"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/inc_seats"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/incVoteShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/inc_vote_percentage"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bjpMlas"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bjp_flag">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_bjp_symbol"
                    android:padding="5dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bjp"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bjp_seats"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/bjpVoteShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bjp_vote_percentage"
                    style="@style/TableContentStyle"
                    android:layout_weight="1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>