<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activityBackground">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".activities.aboutUs.AboutUsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_desc"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/our_policy"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"/>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/upcoming"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_descritpion"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="15dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_descritpion"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"
            android:textIsSelectable="true"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            android:id="@+id/termsAndConditions">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/hyperlink"
                android:layout_gravity="center"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>